Fix text overflow for gallery on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -759,6 +759,42 @@ $icon-block-size-touch: 6rem;
       padding: 0.25em 0.75em;
       //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
     }
+    &:hover,
+  &:active {
+    .overlay {
+      bottom: 0;
+      opacity: 1;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+  .overlay {
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 0;
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s ease;
+    .text {
+      @include mobile {
+        font-size: 0.8em;
+      }
+      color: white;
+      position: absolute;
+      width: calc(100%-2em);
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+  }
   }
 }
 
